@@ -1,3 +1,7 @@
+Tue May 21 13:04:00 1996  layer  (layer at HOBART)
+
+	* fi-keys.el: rfe2356: duplicate global bindings on C-c
+
 Thu May 16 14:48:48 1996  layer  (layer at HOBART)
 
 	* fi-keys.el: undo hacks for key bindings--they turn out to be
